[gd_scene load_steps=4 format=3 uid="uid://dfpdo6veew8h7"]

[ext_resource type="Script" uid="uid://csueku73smwn8" path="res://actor_builders/inventory_system/Item.gd" id="1_fcrgp"]
[ext_resource type="Script" uid="uid://dovonmbw3vymd" path="res://actor_builders/inventory_system/item_popup.gd" id="2_1btww"]
[ext_resource type="Texture2D" uid="uid://c1m8uugmb5g88" path="res://Assets/number_background.png" id="3_byr1g"]

[node name="Item" type="Node2D"]
script = ExtResource("1_fcrgp")
metadata/_edit_vertical_guides_ = [100.0]
metadata/_edit_horizontal_guides_ = [100.0]

[node name="Icon" type="TextureRect" parent="."]
z_index = 1
size_flags_horizontal = 4
size_flags_vertical = 4
stretch_mode = 4

[node name="LegendNumberControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.9, 0.9)
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="LegendNumberControl"]
z_index = 2
custom_minimum_size = Vector2(40, 40)
layout_mode = 0
offset_right = 18.0
offset_bottom = 18.0
mouse_filter = 2
texture = ExtResource("3_byr1g")
expand_mode = 1

[node name="LegendNumberLabel" type="Label" parent="LegendNumberControl"]
unique_name_in_owner = true
z_index = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 28
text = "99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WeightContainer" type="CenterContainer" parent="."]
z_index = 3
custom_minimum_size = Vector2(100, 100)
offset_right = 100.0
offset_bottom = 100.0

[node name="TextureRect" type="TextureRect" parent="WeightContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("3_byr1g")
expand_mode = 1

[node name="WeightLabel" type="Label" parent="WeightContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 48
text = "1"

[node name="ItemPopup" type="Popup" parent="."]
position = Vector2i(200, 100)
size = Vector2i(400, 120)
visible = true
mouse_passthrough = true
min_size = Vector2i(400, 120)
script = ExtResource("2_1btww")

[node name="ColorRect2" type="ColorRect" parent="ItemPopup"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="ItemPopup/ColorRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="ColorRect" type="ColorRect" parent="ItemPopup/ColorRect2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.333333, 0.333333, 0.333333, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ItemPopup/ColorRect2/MarginContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="ColorRect" type="ColorRect" parent="ItemPopup/ColorRect2/MarginContainer/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
color = Color(0.239216, 0.568627, 0.862745, 1)

[node name="MarginContainer" type="MarginContainer" parent="ItemPopup/ColorRect2/MarginContainer/ColorRect/VBoxContainer/ColorRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ItemPopup/ColorRect2/MarginContainer/ColorRect/VBoxContainer/ColorRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ItemNameLabel" type="Label" parent="ItemPopup/ColorRect2/MarginContainer/ColorRect/VBoxContainer/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Big Gun"

[node name="ItemTypeLabel" type="Label" parent="ItemPopup/ColorRect2/MarginContainer/ColorRect/VBoxContainer/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Ranged Weapon"

[node name="MarginContainer" type="MarginContainer" parent="ItemPopup/ColorRect2/MarginContainer/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="ItemPopup/ColorRect2/MarginContainer/ColorRect/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="EngageTextLabel" type="Label" parent="ItemPopup/ColorRect2/MarginContainer/ColorRect/VBoxContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="RangeDamageLabel" type="Label" parent="ItemPopup/ColorRect2/MarginContainer/ColorRect/VBoxContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "pog"

[node name="ItemDescriptionContainer" type="VBoxContainer" parent="ItemPopup/ColorRect2/MarginContainer/ColorRect/VBoxContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 0

[node name="Control2" type="Control" parent="ItemPopup/ColorRect2/MarginContainer/ColorRect/VBoxContainer/MarginContainer/VBoxContainer/ItemDescriptionContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ItemDescriptionLabel" type="RichTextLabel" parent="ItemPopup/ColorRect2/MarginContainer/ColorRect/VBoxContainer/MarginContainer/VBoxContainer/ItemDescriptionContainer"]
layout_mode = 2
bbcode_enabled = true
fit_content = true

[node name="ItemRulesContainer" type="VBoxContainer" parent="ItemPopup/ColorRect2/MarginContainer/ColorRect/VBoxContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 0

[node name="Control2" type="Control" parent="ItemPopup/ColorRect2/MarginContainer/ColorRect/VBoxContainer/MarginContainer/VBoxContainer/ItemRulesContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ItemRulesLabel" type="RichTextLabel" parent="ItemPopup/ColorRect2/MarginContainer/ColorRect/VBoxContainer/MarginContainer/VBoxContainer/ItemRulesContainer"]
layout_mode = 2
bbcode_enabled = true
fit_content = true

[node name="ItemStatsContainer" type="VBoxContainer" parent="ItemPopup/ColorRect2/MarginContainer/ColorRect/VBoxContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 0

[node name="Control4" type="Control" parent="ItemPopup/ColorRect2/MarginContainer/ColorRect/VBoxContainer/MarginContainer/VBoxContainer/ItemStatsContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="ItemStatsLabel" type="RichTextLabel" parent="ItemPopup/ColorRect2/MarginContainer/ColorRect/VBoxContainer/MarginContainer/VBoxContainer/ItemStatsContainer"]
layout_mode = 2
bbcode_enabled = true
fit_content = true

[node name="ColorRect2" type="ColorRect" parent="ItemPopup/ColorRect2/MarginContainer/ColorRect/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 10
color = Color(0.239216, 0.568627, 0.862745, 1)

[node name="MarginContainer2" type="MarginContainer" parent="ItemPopup/ColorRect2/MarginContainer/ColorRect/VBoxContainer/ColorRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ItemTagsContainer" type="VBoxContainer" parent="ItemPopup/ColorRect2/MarginContainer/ColorRect/VBoxContainer/ColorRect2/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ItemTagsLabel" type="RichTextLabel" parent="ItemPopup/ColorRect2/MarginContainer/ColorRect/VBoxContainer/ColorRect2/MarginContainer2/ItemTagsContainer"]
layout_mode = 2
bbcode_enabled = true
text = "sfjihfkjsdhfkjah"
fit_content = true
